--- a/app/templates/security/forgot_password.html
+++ b/app/templates/security/forgot_password.html
@@ -10,8 +10,7 @@
                 <h3 class="text-center">Reset Password</h3>
             </div>
             <div class="card-body">
-                {% include "security/_messages.html" %}
-                <form action="{{ url_for_security('forgot_password') }}" method="POST" name="forgot_password_form">
+                <form action="{{ url_for_security('forgot_password') }}" method="POST" name="forgot_password_form" data-prevent-double-submit="true">
                     {{ forgot_password_form.hidden_tag() }}
                     <div class="mb-3">
                         {{ forgot_password_form.email.label(class_="form-label") }}
