--- a/app/templates/security/mf_recovery.html
+++ b/app/templates/security/mf_recovery.html
@@ -37,16 +37,17 @@
             </div>
           </form>
 
-          {% if rescue_mail %}
-            <hr>
-            <form action="{{ url_for_security('two_factor_rescue') }}" method="POST">
-              {{ mf_recovery_form.hidden_tag() }}
-              <input type="hidden" name="rescue" value="email">
-              <div class="d-grid">
-                <button class="btn btn-outline-secondary">Send Rescue Email</button>
+            {# Rescue email button disabled - not working reliably
+            {% if config.SECURITY_TWO_FACTOR_RESCUE_MAIL %}
+              <div class="mt-3">
+                <p class="text-muted">Lost access to your authenticator app?</p>
+                <form action="{{ url_for_security('two_factor_rescue') }}" method="POST">
+                  <input type="hidden" name="rescue" value="email">
+                  <button type="submit" class="btn btn-outline-secondary" onclick="this.innerHTML='&lt;span class=&quot;spinner-border spinner-border-sm&quot; role=&quot;status&quot;&gt;&lt;/span&gt; Sending...'; this.disabled=true;">Send Rescue Email</button>
+                </form>
               </div>
-            </form>
-          {% endif %}
+            {% endif %}
+            #}
         </div>
       </div>
     </div>
