--- a/app/templates/security/reset_password.html
+++ b/app/templates/security/reset_password.html
@@ -10,8 +10,7 @@
                 <h3 class="text-center">Set New Password</h3>
             </div>
             <div class="card-body">
-                {% include "security/_messages.html" %}
-                <form action="{{ url_for_security('reset_password', token=reset_password_token) }}" method="POST" name="reset_password_form">
+                <form action="{{ url_for_security('reset_password', token=reset_password_token) }}" method="POST" name="reset_password_form" data-prevent-double-submit="true">
                     {{ reset_password_form.hidden_tag() }}
                     <div class="mb-3">
                         {{ reset_password_form.password.label(class_="form-label") }}
