--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,10 @@
             <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
             <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
         {% endblock %}
+        
+        {% if config.RECAPTCHA_ENABLED %}
+        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+        {% endif %}
     </head>
     <body class="bg-light">
         {% block navbar %}
