--- a/app/templates/security/register_user.html
+++ b/app/templates/security/register_user.html
@@ -33,50 +33,47 @@
                 <form action="{{ url_for_security('register') }}" method="POST" name="register_user_form">
                     {{ register_user_form.hidden_tag() }}
                 
-                    <div class="mb-3">
-                        {{ register_user_form.email.label(class_="form-label") }}
-                        {{ register_user_form.email(class_="form-control") }}
-                        {% if register_user_form.email.errors %}
-                            <div class="invalid-feedback d-block">
-                                {% for error in register_user_form.email.errors %}
-                                    {{ error }}
-                                {% endfor %}
+                    <!-- Render all form fields dynamically -->
+                    {% for field in register_user_form %}
+                        {% if field.name not in ['csrf_token', 'submit', 'next'] %}
+                            <div class="mb-3">
+                                {{ field.label(class_="form-label") }}
+                                {% if field.type == 'PasswordField' %}
+                                    {{ field(class_="form-control", id=field.name) }}
+                                {% else %}
+                                    {{ field(class_="form-control") }}
+                                {% endif %}
+                                {% if field.errors %}
+                                    <div class="invalid-feedback d-block">
+                                        {% for error in field.errors %}
+                                            {{ error }}
+                                        {% endfor %}
+                                    </div>
+                                {% endif %}
+                                {% if field.name == 'password' %}
+                                    <div id="password-strength" class="form-text"></div>
+                                {% elif field.name == 'password_confirm' %}
+                                    <div id="password-match-message" class="form-text"></div>
+                                {% endif %}
                             </div>
                         {% endif %}
-                    </div>
+                    {% endfor %}
                     
+                    {% if config.RECAPTCHA_ENABLED %}
                     <div class="mb-3">
-                        {{ register_user_form.password.label(class_="form-label") }}
-                        {{ register_user_form.password(class_="form-control", id="password") }}
-                        {% if register_user_form.password.errors %}
-                            <div class="invalid-feedback d-block">
-                                {% for error in register_user_form.password.errors %}
-                                    {{ error }}
-                                {% endfor %}
-                            </div>
-                        {% endif %}
-                        <div id="password-strength" class="form-text"></div>
+                        <div class="g-recaptcha" data-sitekey="{{ config.RECAPTCHA_SITE_KEY }}"></div>
+                        <div class="form-text text-muted">Please complete the verification above</div>
                     </div>
-                    
-                    <div class="mb-3">
-                        {{ register_user_form.password_confirm.label(class_="form-label") }}
-                        {{ register_user_form.password_confirm(class_="form-control", id="password_confirm") }}
-                        {% if register_user_form.password_confirm.errors %}
-                            <div class="invalid-feedback d-block">
-                                {% for error in register_user_form.password_confirm.errors %}
-                                    {{ error }}
-                                {% endfor %}
-                            </div>
-                        {% endif %}
-                        <div id="password-match-message" class="form-text"></div>
-                    </div>
+                    {% endif %}
                     
                     <div class="d-grid">
                         {{ register_user_form.submit(class_="btn btn-primary") }}
                     </div>
                 
                     <!-- Hide the next field with a unique ID -->
-                    {{ register_user_form.next(style="display: none;", id="register_next") }}
+                    {% if register_user_form.next %}
+                        {{ register_user_form.next(style="display: none;", id="register_next") }}
+                    {% endif %}
                 </form>
                 <div class="text-center mt-3">
                     <a href="{{ url_for_security('login') }}">Already have an account? Login</a>
